--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,8 +22,11 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta
       name="description"
-      content="Dark themed website template built on AstroJS, designed for technological startup business."
+      content="Academia Galera Jiu Jitsu Brasileño en Curridabat Costa Rica"
     />
+    <meta property="og:title" content="Academia Galera Jiu Jitsu Brasileño en Curridabat Costa Rica">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="../../public/logogalera.jpg">
     <title>{title}</title>
   </head>
   <body>
