--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import { Hero } from "../components/Hero.jsx";
 import { Navbar } from "../components/Navbar.jsx";
 import { Features1 } from "../components/Features1.jsx";
-import { Features2 } from "../components/Features2.jsx";
 import { Horario } from "../components/Horario.jsx";
-import { FeaturesDiagonal } from "../components/FeaturesDiagonal.jsx";
 import { Pricing } from "../components/Pricing.jsx";
-import { FAQ } from "../components/FAQ.jsx";
 import { Divider } from "../components/Divider";
 import { Footer } from "../components/Footer.jsx";
 import { ScrollUpButton } from "../components/ScrollUpButton";
@@ -16,7 +13,7 @@ import "../styles/Diagonals.css";
 
 ---
 
-<Layout title="Tailcast">
+<Layout title="Academia Galera Jiu Jitsu">
   <Navbar client:load />
   <Hero client:load />
   <Features1 client:load />
